; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_send_informational.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_http1.c_on_send_informational.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.st_h2o_http1_conn_t* }
%struct.st_h2o_http1_conn_t = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i64 }
%struct.st_h2o_http1_finalostream_t = type { %struct.TYPE_8__, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__, i64 }
%struct.TYPE_7__ = type { i32, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*, i8*)* @on_send_informational to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_send_informational(%struct.TYPE_9__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_http1_conn_t*, align 8
  %6 = alloca %struct.st_h2o_http1_finalostream_t*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 0
  %9 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %8, align 8
  store %struct.st_h2o_http1_conn_t* %9, %struct.st_h2o_http1_conn_t** %5, align 8
  %10 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %11 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.st_h2o_http1_finalostream_t*
  store %struct.st_h2o_http1_finalostream_t* %14, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %19 = call i32 @close_connection(%struct.st_h2o_http1_conn_t* %18, i32 1)
  br label %55

20:                                               ; preds = %2
  %21 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %22 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %25 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 2
  %28 = load i32*, i32** %27, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %51

30:                                               ; preds = %20
  %31 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %32 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %31, i32 0, i32 1
  %33 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %34 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %33, i32 0, i32 0
  %35 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %36 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 2
  %39 = load i32*, i32** %38, align 8
  %40 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %41 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %46 = getelementptr inbounds %struct.st_h2o_http1_finalostream_t, %struct.st_h2o_http1_finalostream_t* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @finalostream_send(i32* %32, %struct.TYPE_10__* %34, i32* %39, i32 %44, i32 %49)
  br label %55

51:                                               ; preds = %20
  %52 = load %struct.st_h2o_http1_finalostream_t*, %struct.st_h2o_http1_finalostream_t** %6, align 8
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %54 = call i32 @do_send_informational(%struct.st_h2o_http1_finalostream_t* %52, %struct.TYPE_9__* %53)
  br label %55

55:                                               ; preds = %51, %30, %17
  ret void
}

declare dso_local i32 @close_connection(%struct.st_h2o_http1_conn_t*, i32) #1

declare dso_local i32 @finalostream_send(i32*, %struct.TYPE_10__*, i32*, i32, i32) #1

declare dso_local i32 @do_send_informational(%struct.st_h2o_http1_finalostream_t*, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
